--- a/.github/workflows/deploy-to-netsuite.yml
+++ b/.github/workflows/deploy-to-netsuite.yml
@@ -29,7 +29,7 @@ jobs:
           SDF_TOKEN_ID: ${{ secrets.NETSUITE_TOKEN_ID }}
           SDF_TOKEN_SECRET: ${{ secrets.NETSUITE_TOKEN_SECRET }}
         run: |
-          suitecloud account:setup -i --account $SDF_ACCOUNT --role $SDF_ROLE --email $SDF_EMAIL --token $SDF_TOKEN_ID --secret $SDF_TOKEN_SECRET
+          suitecloud account:setup --account $SDF_ACCOUNT --role $SDF_ROLE --email $SDF_EMAIL --token $SDF_TOKEN_ID --secret $SDF_TOKEN_SECRET
 
       - name: Deploy to NetSuite
         run: suitecloud deploy
