--- a/.github/workflows/deploy-to-netsuite.yml
+++ b/.github/workflows/deploy-to-netsuite.yml
@@ -24,10 +24,8 @@ jobs:
       - name: Install SuiteCloud CLI
         run: npm install -g @oracle/suitecloud-cli --acceptsuitecloudsdklicense
 
-      - name: Set up SuiteCloud account configuration
-        run: |
-          echo "Setting up SuiteCloud configuration..."
-          suitecloud account:setup --account ${{ secrets.NETSUITE_ACCOUNT }} --role ${{ secrets.NETSUITE_ROLE }} --email ${{ secrets.NETSUITE_EMAIL }} --token ${{ secrets.NETSUITE_TOKEN_ID }} --secret ${{ secrets.NETSUITE_TOKEN_SECRET }}
+      - name: Deploy to Sandbox
+        run: ./node_modules/.bin/suitecloud account:savetoken --account ${{ secrets.NETSUITE_ACCOUNT }} --role ${{ secrets.NETSUITE_ROLE }} --email ${{ secrets.NETSUITE_EMAIL }} --token ${{ secrets.NETSUITE_TOKEN_ID }} --secret ${{ secrets.NETSUITE_TOKEN_SECRET }}
         
 
       - name: Deploy to NetSuite
